Adicionando foto de perfil

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Francisco Monnerat"
-  avatar           : "profile.png"
+  avatar           : "https://instagram.fcfc2-1.fna.fbcdn.net/vp/72d746219ef53d398b1bfc6dc9c41ea4/5E5E09CC/t51.2885-19/s150x150/26069049_1554282077992666_851001873681874944_n.jpg?_nc_ht=instagram.fcfc2-1.fna.fbcdn.net"
   bio              : "Pagina Academica"
   location         : "Chapecó - SC"
   employer         :
